[gd_scene load_steps=6 format=3 uid="uid://0kwbfuwbaeg6"]

[ext_resource type="Script" path="res://npcs/enemies/enemy_stalker.gd" id="1_vj7lc"]
[ext_resource type="Texture2D" uid="uid://6vfinokjdstk" path="res://npcs/enemies/stalker.png" id="2_5plv6"]
[ext_resource type="Script" path="res://npcs/enemies/hitbox.gd" id="3_wetbe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4hq1m"]
radius = 4.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3qhah"]
radius = 6.0
height = 20.0

[node name="enemy_stalker" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_vj7lc")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_5plv6")

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_4hq1m")

[node name="close_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="attack_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="reset_timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 4
script = ExtResource("3_wetbe")

[node name="col" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CapsuleShape2D_3qhah")

[connection signal="timeout" from="close_timer" to="." method="_on_close_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
